kubernetes-stack/yamls-post-chaos/virtualservices/ms-delete-vs.yaml

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ms-delete-vs
spec:
  hosts:
  - ms-delete
  http:
  - route:
    - destination:
        host: ms-delete
        port:
          number: 8087
    retries:
      attempts: 10
      perTryTimeout: 3s
      retryOn: 5xx,connect-failure
    timeout: 10s
