kubernetes-stack/yamls-post-chaos/virtualservices/ms-read-vs.yaml
---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ms-read-vs
spec:
  hosts:
  - ms-read
  http:
  - route:
    - destination:
        host: ms-read
        port:
          number: 8088
        subset: primary
    #retries:
    #  attempts: 10
    #  perTryTimeout: 3s
    #  retryOn: 5xx,connect-failure
    #timeout: 10s
---


apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: ms-read
  #namespace: istio-system
spec:
  host: ms-read
#  trafficPolicy:
#      connectionPool:
#        http: {}
#        tcp: {}
#      loadBalancer:
#        simple: RANDOM
#      outlierDetection:
#        baseEjectionTime: 5m
#        consecutive5xxErrors: 1
#        consecutiveGatewayErrors: 5
#        interval: 5m
#        maxEjectionPercent: 100
  subsets:
  - name: primary
    labels:
      app: read-app
      component: ms-read
