kubernetes-stack/yamls-post-chaos/virtualservices/postgres-vs.yaml

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: postgres-vs
spec:
  hosts:
  - postgres
  http:
  - route:
    - destination:
        host: postgres
        port:
          number: 5432
    retries:
      attempts: 10
      perTryTimeout: 3s
      retryOn: 5xx,connect-failure
    timeout: 10s
