kubernetes-stack/yamls-post-chaos/virtualservices/zookeeper-vs.yaml

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: zookeeper-vs
spec:
  hosts:
  - zookeeper
  http:
  - route:
    - destination:
        host: zookeeper
        port:
          number: 2181
    retries:
      attempts: 10
      perTryTimeout: 3s
      retryOn: 5xx,connect-failure
    timeout: 10s
